force-app/main/default/src/objects/HealthCloudGA__UseStandardTrigger__mdt/fields/HealthCloudGA__Active__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Active__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Standard trigger runs instead of packaged trigger.</description>
    <label>Active</label>
    <type>Checkbox</type>
</CustomField>