force-app/main/default/src/objects/HealthCloudGA__UseStandardTrigger__mdt/fields/HealthCloudGA__Object__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__Object__c</fullName>
    <description>Objects currently available in Salesforce platform.</description>
    <label>Object</label>
    <length>80</length>
    <required>true</required>
    <type>Text</type>
</CustomField>