force-app/main/default/src/objects/HealthCloudGA__UseStandardTrigger__mdt/fields/HealthCloudGA__TriggerEvents__c.field-meta.xml
<CustomField>
    <fullName>HealthCloudGA__TriggerEvents__c</fullName>
    <description>Events currently available to run in Salesforce platform.</description>
    <label>Trigger Events</label>
    <length>120</length>
    <required>true</required>
    <type>Text</type>
</CustomField>